--- a/README
+++ b/README
@@ -4,7 +4,7 @@ KBHD (Keyboard Handler)
 This module works simply by registering an IRQ handler, reading the keyboard port (0x60 in our case),
 translating the result scancode into ascii value then saving it for use in the ``/proc`` entry.
 
-NOTE: This module is very platform-specific, meaning it might not work in some platforms. The module behavior might be affected by the ISA, OS, IRQ system, kernel version and by the keyboard layout.
+NOTE: This module is very platform-specific, meaning it might not work in some platforms. Make sure you have a 8042 chip involved.
 All tests were performed with Light-Ubuntu x86_64, kernel ``5.13.0-40-generic``, IRQ number (1) and Qwerty keyboard layout.
 
 In order to build the module, use ``make all``.
