--- a/README
+++ b/README
@@ -4,8 +4,9 @@ KBHD (Keyboard Handler)
 This module works simply by registering an IRQ handler, reading the keyboard port (0x60 in our case),
 translating the result scancode into ascii value then saving it for use in the ``/proc`` entry.
 
-NOTE: This module is very platform-specific, meaning it might not work in some platforms. Make sure you have a 8042 chip involved.
-All tests were performed with Light-Ubuntu x86_64, kernel ``5.13.0-40-generic``, IRQ number (1) and Qwerty keyboard layout.
+NOTE: This module is very platform-specific, meaning it might not work in some platforms. Important
+On Modern non-VM computers it might not work, since they might use Message-Signaled Interrupts instead. This works on virtual-machine that simulates the 8042 chip. 8042 chip was in charge of converting between the signals from the keyboard, and the signals to the CPU. So for example it will send an interrupt when it noticed a key was pressed.
+All tests were performed with VM-Based Light-Ubuntu x86_64, kernel ``5.13.0-40-generic``, IRQ number (1) and Qwerty keyboard layout.
 
 In order to build the module, use ``make all``.
 This module supports debugging, which just writes log info into the kernel ring buffer. 
