--- a/README
+++ b/README
@@ -5,7 +5,7 @@ This module works simply by registering an IRQ handler, reading the keyboard por
 translating the result scancode into ascii value then saving it for use in the ``/proc`` entry.
 
 NOTE: This module is very platform-specific, meaning it might not work in some platforms. Important
-On Modern non-VM computers it might not work, since they might use Message-Signaled Interrupts instead. This works on virtual-machine that simulates the 8042 chip. 8042 chip was in charge of converting between the signals from the keyboard, and the signals to the CPU. So for example it will send an interrupt when it noticed a key was pressed.
+On Modern non-VM computers it might not work, since they might use Message-Signaled Interrupts instead. This works on virtual-machine that simulates the 8042 chip and uses a ps/2 keyboards. 8042 chip was in charge of converting between the signals from the keyboard, and the signals to the CPU. So for example it will send an interrupt when it noticed a key was pressed.
 All tests were performed with VM-Based Light-Ubuntu x86_64, kernel ``5.13.0-40-generic``, IRQ number (1) and Qwerty keyboard layout.
 
 In order to build the module, use ``make all``.
